Bug 564577 - __noSuchMethod__ no longer invoked for defined non-function properties (r=igor)